IO 1.41_50 -- Dec 16 2019 - Ricardo Signes
  * [ TRIAL RELEASE ]
  * Loading IO is now threadsafe, avoiding the core bug reported as GH #14816.
    Implemented by converting getline() and getlines() to XS code.

IO 1.41 -- Dec 12 2019 - Ricardo Signes
  * [ TRIAL RELEASE ]
  * import the latest from blead, so some changes may be in intermediate
    versions found only in releases of perl5
  * (perl #133936) make send() a bit saner
  * (perl #133936) document differences between IO::Socket::* and builtin
  * (perl #133936) ensure TO is honoured for UDP $sock->send()
  * Remove vestiges of mpeix support (removed in 5.17.x)
  * Documentation formatting fixes
  * Improve isolation of tests as they run

IO 1.38 -- Apr 19 2018 - Todd Rinaldo
  * Remove pre 5.8 logic from code base.
  * Bump all IO modules to 1.38 and set required Perl to 5.8.1
  * Fix for perl #125723
  * IO test: adjust require for non CORE perl
  * IO::Handle - fix precedence issue
  * Document IO::Select error detection
  * Rely on C89 <time.h>
  * (perl #130856) deal with unpack_sockaddr_un() croaking
  * Switch most open() calls to three-argument form.
  * (perl #129788) IO::Poll: fix memory leak
  * (perl #128095) check pack_sockaddr_un()'s return value
  * dist/: remove . from @INC when loading optional modules
  * Fix IO::Handle documentation mangled by a manually applied patch
  * Make IO::Poll->poll call _poll even with an empty fd array
  * Fix assertion when calling IO::Poll::_poll() with an empty fd array
  * Some BSD implementations might have <sys/poll.h> instead of <poll.h>.

IO 1.36 -- Jun 26 2015 (Not released to CPAN)
  * dist/IO/t/io_utf8argv.t: Generalize for non-ASCII platforms.
  * VMS does have fsync, so configure accordingly.
  * Skip obsolete skip in io_xs.t.
  * Label conditionally unused.
  * Use <sys/poll.h> if available before going select().
  * Fix assertion when calling IO::Poll::_poll() with an empty fd array
  * Make IO::Poll->poll call _poll even with an empty fd array