@@ -1,3 +1,10 @@
+IO 1.42 - Jan 20 2020 - Todd Rinaldo
+  * Point IO support to perl/perl5 not dual-life/IO
+
+IO 1.41 - Jan 20 2020 - Todd Rinaldo
+  * Switch pre-release testing to github actions.
+  * Update MANIFEST with new test.
+
 IO 1.41_50 -- Dec 16 2019 - Ricardo Signes
   * [ TRIAL RELEASE ]
   * Loading IO is now threadsafe, avoiding the core bug reported as GH #14816.
